--- a/Flex/Index.html
+++ b/Flex/Index.html
@@ -8,13 +8,17 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <header>
-      <ul class="nav">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Contact us</a></li>
-      </ul>
-    </header>
+    <div class="container">
+      <div class="nav"></div>
+      <div class="header"></div>
+      <div class="content">
+        <div class="left"></div>
+        <div class="right">
+          <div class="up"></div>
+          <div class="down"></div>
+        </div>
+      </div>
+      <div class="footer"></div>
+    </div>
   </body>
 </html>
