portfolio with animations

--- a/7feb23/index.html
+++ b/7feb23/index.html
@@ -33,7 +33,7 @@
         <h1>Muhammad <span>Hammad</span></h1>
         <h3>I' am a web developer</h3>
         <div class="newsletter">
-          <form action="">
+          <form action="" class="btn-animation">
             <input
               type="email"
               name="email"
@@ -48,7 +48,6 @@
     <!-- About section start -->
     <section class="about">
       <div class="main">
-        <img src="bg.jpg" alt="image" />
         <div class="about-text">
           <h2>About me</h2>
           <h5>Developer <span>& Designer</span></h5>
